[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sudoku.gd" type="Script" id=1]
[ext_resource path="res://HackNerdFont-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/play.svg" type="Texture" id=3]
[ext_resource path="res://hackNerdLikeHard.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.592157, 0.635294, 0.709804, 0.364706 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.164706, 0.364706, 0.882353, 1 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="ButtonGroup" id=11]

[sub_resource type="ButtonGroup" id=9]
resource_local_to_scene = false

[sub_resource type="StreamTexture" id=15]
flags = 4
load_path = "res://.import/pause.svg-3aa3dea90541922515268895e528af95.stex"

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.921569, 0.933333, 0.952941, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_offset = Vector2( 2, 2 )

[sub_resource type="ButtonGroup" id=4]

[sub_resource type="DynamicFont" id=7]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.27451, 0.447059, 0.898039, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.164706, 0.364706, 0.882353, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color( 0.372549, 0.372549, 0.372549, 0.6 )
shadow_size = 4
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=17]
size = 20
font_data = ExtResource( 2 )

[node name="Sudoku" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )

[node name="Main" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )

[node name="Left" type="VBoxContainer" parent="ColorRect/Main"]
margin_right = 612.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Difficulty" type="HBoxContainer" parent="ColorRect/Main/Left"]
margin_right = 612.0
margin_bottom = 30.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="ColorRect/Main/Left/Difficulty"]
margin_left = 102.0
margin_top = 3.0
margin_right = 246.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.592157, 0.635294, 0.709804, 1 )
custom_fonts/font = SubResource( 12 )
text = "Difficulty: "
align = 1
valign = 1

[node name="easy" type="Button" parent="ColorRect/Main/Left/Difficulty" groups=["DifficultySelector"]]
margin_left = 250.0
margin_right = 334.0
margin_bottom = 30.0
rect_min_size = Vector2( 84, 30 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 13
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.27451, 0.294118, 0.32549, 1 )
custom_colors/font_color = Color( 0.27451, 0.294118, 0.32549, 1 )
custom_colors/font_color_hover = Color( 0.27451, 0.294118, 0.32549, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 19 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 18 )
keep_pressed_outside = true
group = SubResource( 11 )
text = "Easy"
icon_align = 1

[node name="medium" type="Button" parent="ColorRect/Main/Left/Difficulty" groups=["DifficultySelector"]]
margin_left = 338.0
margin_right = 422.0
margin_bottom = 30.0
rect_min_size = Vector2( 84, 30 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 13
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.27451, 0.294118, 0.32549, 1 )
custom_colors/font_color = Color( 0.27451, 0.294118, 0.32549, 1 )
custom_colors/font_color_hover = Color( 0.27451, 0.294118, 0.32549, 1 )
custom_colors/font_color_pressed = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 19 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 18 )
keep_pressed_outside = true
group = SubResource( 9 )
text = "Medium"
icon_align = 1

[node name="hard" type="Button" parent="ColorRect/Main/Left/Difficulty" groups=["DifficultySelector"]]
margin_left = 426.0
margin_right = 510.0
margin_bottom = 30.0
rect_min_size = Vector2( 84, 30 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 13
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.27451, 0.294118, 0.32549, 1 )
custom_colors/font_color = Color( 0.27451, 0.294118, 0.32549, 1 )
custom_colors/font_color_hover = Color( 0.27451, 0.294118, 0.32549, 1 )
custom_colors/font_color_pressed = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 19 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 18 )
keep_pressed_outside = true
group = SubResource( 9 )
text = "Hard"
icon_align = 1

[node name="Panel" type="Panel" parent="ColorRect/Main/Left"]
margin_top = 34.0
margin_bottom = 34.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0

[node name="Right" type="VBoxContainer" parent="ColorRect/Main"]
margin_left = 616.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 408, 600 )
size_flags_vertical = 3
alignment = 1

[node name="ToolsInfo" type="HBoxContainer" parent="ColorRect/Main/Right"]
margin_right = 408.0
margin_bottom = 34.0
alignment = 1

[node name="TimeBox" type="HBoxContainer" parent="ColorRect/Main/Right/ToolsInfo"]
margin_left = 74.0
margin_right = 166.0
margin_bottom = 34.0

[node name="Time" type="Label" parent="ColorRect/Main/Right/ToolsInfo/TimeBox"]
margin_top = 5.0
margin_right = 48.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0.592157, 0.635294, 0.709804, 1 )
custom_fonts/font = SubResource( 12 )
text = "Time"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Main/Right/ToolsInfo/TimeBox"]
margin_left = 52.0
margin_right = 92.0
margin_bottom = 34.0

[node name="PausePlay" type="Button" parent="ColorRect/Main/Right/ToolsInfo/TimeBox/VBoxContainer"]
margin_right = 40.0
margin_bottom = 34.0
rect_min_size = Vector2( 40, 34 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource( 15 )
flat = true
icon_align = 1
expand_icon = true

[node name="Play" type="Button" parent="ColorRect/Main/Right/ToolsInfo/TimeBox/VBoxContainer"]
visible = false
margin_right = 40.0
margin_bottom = 34.0
rect_min_size = Vector2( 40, 34 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 5
size_flags_vertical = 5
icon = ExtResource( 3 )
flat = true
icon_align = 1
expand_icon = true

[node name="Mistakes" type="HBoxContainer" parent="ColorRect/Main/Right/ToolsInfo"]
margin_left = 170.0
margin_right = 334.0
margin_bottom = 34.0

[node name="Misakes" type="Label" parent="ColorRect/Main/Right/ToolsInfo/Mistakes"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0.592157, 0.635294, 0.709804, 1 )
custom_fonts/font = SubResource( 12 )
text = "Mistakes: "
align = 1
valign = 1

[node name="num" type="Label" parent="ColorRect/Main/Right/ToolsInfo/Mistakes"]
margin_left = 124.0
margin_top = 5.0
margin_right = 136.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "0"
align = 1
valign = 1
uppercase = true

[node name="sur" type="Label" parent="ColorRect/Main/Right/ToolsInfo/Mistakes"]
margin_left = 140.0
margin_top = 5.0
margin_right = 164.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "/3"
align = 1
valign = 1
uppercase = true

[node name="GridContainer" type="GridContainer" parent="ColorRect/Main/Right"]
margin_left = 74.0
margin_top = 74.0
margin_right = 334.0
margin_bottom = 334.0
rect_min_size = Vector2( 248, 248 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 1.48
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 3

[node name="1" type="Button" parent="ColorRect/Main/Right/GridContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_focus = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_hover = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_pressed = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
group = SubResource( 4 )
text = "1"
icon_align = 1

[node name="2" type="Button" parent="ColorRect/Main/Right/GridContainer"]
margin_left = 90.0
margin_right = 170.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_focus = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_hover = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_pressed = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
group = SubResource( 4 )
text = "2"
icon_align = 1

[node name="3" type="Button" parent="ColorRect/Main/Right/GridContainer"]
margin_left = 180.0
margin_right = 260.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_focus = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_hover = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_pressed = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
group = SubResource( 4 )
text = "3"
icon_align = 1

[node name="4" type="Button" parent="ColorRect/Main/Right/GridContainer"]
margin_top = 90.0
margin_right = 80.0
margin_bottom = 170.0
rect_min_size = Vector2( 80, 80 )
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_focus = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_hover = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_pressed = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
group = SubResource( 4 )
text = "4"
icon_align = 1

[node name="5" type="Button" parent="ColorRect/Main/Right/GridContainer"]
margin_left = 90.0
margin_top = 90.0
margin_right = 170.0
margin_bottom = 170.0
rect_min_size = Vector2( 80, 80 )
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_focus = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_hover = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_pressed = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
group = SubResource( 4 )
text = "5"
icon_align = 1

[node name="6" type="Button" parent="ColorRect/Main/Right/GridContainer"]
margin_left = 180.0
margin_top = 90.0
margin_right = 260.0
margin_bottom = 170.0
rect_min_size = Vector2( 80, 80 )
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_focus = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_hover = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_pressed = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
group = SubResource( 4 )
text = "6"
icon_align = 1

[node name="7" type="Button" parent="ColorRect/Main/Right/GridContainer"]
margin_top = 180.0
margin_right = 80.0
margin_bottom = 260.0
rect_min_size = Vector2( 80, 80 )
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_focus = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_hover = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_pressed = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
group = SubResource( 4 )
text = "7"
icon_align = 1

[node name="8" type="Button" parent="ColorRect/Main/Right/GridContainer"]
margin_left = 90.0
margin_top = 180.0
margin_right = 170.0
margin_bottom = 260.0
rect_min_size = Vector2( 80, 80 )
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_focus = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_hover = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_pressed = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
group = SubResource( 4 )
text = "8"
icon_align = 1

[node name="9" type="Button" parent="ColorRect/Main/Right/GridContainer"]
margin_left = 180.0
margin_top = 180.0
margin_right = 260.0
margin_bottom = 260.0
rect_min_size = Vector2( 80, 80 )
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.164706, 0.364706, 0.882353, 1 )
custom_colors/font_color_focus = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_hover = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_colors/font_color_pressed = Color( 0.163872, 0.363021, 0.880811, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
group = SubResource( 4 )
text = "9"
icon_align = 1

[node name="New Game" type="Button" parent="ColorRect/Main/Right"]
margin_left = 74.0
margin_top = 375.0
margin_right = 334.0
margin_bottom = 425.0
rect_min_size = Vector2( 260, 50 )
size_flags_horizontal = 6
size_flags_vertical = 2
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "New Game"
icon_align = 1

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 200 )
custom_styles/panel = SubResource( 16 )

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -49.0
margin_right = 150.0
margin_bottom = 49.0

[node name="MessageLabel" type="Label" parent="PopupDialog/VBoxContainer"]
margin_right = 300.0
margin_bottom = 47.0
rect_min_size = Vector2( 300, 20 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = " "
align = 1
valign = 1

[node name="New Game" type="Button" parent="PopupDialog/VBoxContainer"]
margin_left = 100.0
margin_top = 59.0
margin_right = 200.0
margin_bottom = 89.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "New Game"
icon_align = 1

[node name="PausePopUp" type="PopupDialog" parent="."]
custom_styles/panel = SubResource( 16 )

[node name="Play" type="Button" parent="PausePopUp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 60 )
mouse_default_cursor_shape = 2
icon = ExtResource( 3 )
flat = true
icon_align = 1
expand_icon = true

[connection signal="pressed" from="ColorRect/Main/Right/ToolsInfo/TimeBox/VBoxContainer/PausePlay" to="." method="_on_PausePlay_pressed"]
[connection signal="pressed" from="ColorRect/Main/Right/ToolsInfo/TimeBox/VBoxContainer/Play" to="." method="_on_PausePlay_pressed"]
[connection signal="pressed" from="ColorRect/Main/Right/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="PopupDialog/VBoxContainer/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="PausePopUp/Play" to="." method="_on_PausePlay_pressed"]
